# teaio

./: .gitignore  CMakeLists.txt
lib/: CMakeLists.txt
src/: Ayanami.cpp  Teaio.h
